# receipt-sdk-py

./: .cursorignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-ed25519.yml  ci.yml
examples/: ok.json
receipt_verify/: __init__.py  __main__.py  cli.py  signature.py  verify.py
schema/: receipt.schema.json
scripts/: common_canonical.py  debug_canonical.py  make_signed_ed25519.py  verify_ed25519_real.py
tests/: test_ed25519.py
